[gd_scene load_steps=9 format=3 uid="uid://nyegcb5djfjc"]

[ext_resource type="Script" path="res://chr/new_enemy.gd" id="1_fuv7x"]
[ext_resource type="Texture2D" uid="uid://d3ctub1fuk1fm" path="res://art/chrSprt/debugLook.png" id="2_qe3bn"]
[ext_resource type="Script" path="res://chr/DebugLook.gd" id="3_42oki"]
[ext_resource type="Texture2D" uid="uid://cf8u3ly1l5h55" path="res://art/SlimeGreen/SlimeBasic_00000.png" id="4_ng1ln"]
[ext_resource type="Script" path="res://chr/new enemy coor.gd" id="6_8sgku"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ltfpk"]
radius = 95.5
height = 294.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jgh45"]
radius = 98.0
height = 298.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bx1hs"]
radius = 3226.22

[node name="new enemy" type="CharacterBody2D"]
position = Vector2(-1, 2)
collision_layer = 4
collision_mask = 16
script = ExtResource("1_fuv7x")

[node name="DebugLook" type="Sprite2D" parent="."]
position = Vector2(1, 116)
scale = Vector2(2, 0.5)
texture = ExtResource("2_qe3bn")
centered = false
script = ExtResource("3_42oki")

[node name="Jelly" type="Sprite2D" parent="."]
position = Vector2(1, -3)
texture = ExtResource("4_ng1ln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -1.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ltfpk")

[node name="hit range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit range"]
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jgh45")

[node name="detect range" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect range"]
position = Vector2(1, -8)
shape = SubResource("CircleShape2D_bx1hs")
debug_color = Color(0.45098, 0.588235, 0.270588, 0.196078)

[node name="Label" type="Label" parent="."]
offset_left = -22.0
offset_top = -45.0
offset_right = 26.0
offset_bottom = -19.0
script = ExtResource("6_8sgku")

[connection signal="body_entered" from="detect range" to="." method="_on_detect_range_body_entered"]
[connection signal="body_exited" from="detect range" to="." method="_on_detect_range_body_exited"]
